Fixed logo stretching on mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -16,8 +16,6 @@ body {
 @media screen and (max-width: 767px) {
 	#navbar-logo {
 		width: 40px;
-		height: 40px;
-		margin-top: -10px
 	}
 }
 
